--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
     <script>
         const locations = [
-            { lat: 37.5665, lon: 126.9780, musicFile: 'music1.mp3', name: '서울' }, // 예시 위치 1
-            { lat: 37.5775, lon: 126.9870, musicFile: 'music2.mp3', name: '서울역' }  // 예시 위치 2
+            { lat: 36.3171, lon: 127.3478, musicFile: '1.mp3', name: '출발' },
+            { lat: 36.3129, lon: 127.3499, musicFile: '2.mp3', name: '호반' },
+
         ];
 
         function playMusic(musicFile) {
