--- a/index.html
+++ b/index.html
@@ -7,28 +7,85 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            width: 100%;
+            padding: 15px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .container {
+            width: 100%;
+            max-width: 800px;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            margin-top: 20px;
         }
         .info {
             margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+        }
+        h1, h2 {
+            margin: 0;
+        }
+        h1 {
+            font-size: 24px;
+        }
+        h2 {
+            font-size: 20px;
+            color: #333;
+        }
+        p, ul {
+            margin: 10px 0;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        li:last-child {
+            border-bottom: none;
+        }
+        .info p {
+            font-size: 16px;
+            color: #555;
         }
     </style>
 </head>
 <body>
-    <h1>GPS 음악 플레이어</h1>
-    
-    <div class="info">
-        <h2>현재 위치</h2>
-        <p id="current-location">위도: - , 경도: -</p>
+    <header>
+        <h1>GPS 음악 플레이어</h1>
+    </header>
+    <div class="container">
+        <div class="info">
+            <h2>현재 위치</h2>
+            <p id="current-location">위도: - , 경도: -</p>
+        </div>
+
+        <div class="info">
+            <h2>목표 위치 및 음악</h2>
+            <ul id="target-list">
+                <!-- 목표 위치 및 음악 정보가 여기에 표시됩니다 -->
+            </ul>
+        </div>
     </div>
 
-    <div class="info">
-        <h2>목표 위치 및 음악</h2>
-        <ul id="target-list">
-            <!-- 목표 위치 및 음악 정보가 여기에 표시됩니다 -->
-        </ul>
-    </div>
-    
     <audio id="audio" type="audio/mp3"></audio>
 
     <script>
@@ -93,7 +150,7 @@
         }
 
         updateTargetList(); // 목표 위치 및 음악 정보 업데이트
-        setInterval(updateLocation, 10000); // 10초에 한 번씩 위치 갱신
+        setInterval(updateLocation, 3000); // 3초에 한 번씩 위치 갱신
         updateLocation(); // 첫 위치 갱신 즉시 호출
     </script>
 </body>
