--- a/도안동.html
+++ b/도안동.html
@@ -21,6 +21,16 @@
             padding: 15px;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            position: relative;
+        }
+        .title {
+            margin: 0;
+            font-size: 24px;
+        }
+        .subtitle {
+            font-size: 18px;
+            color: #ffffff; /* 흰색 글씨 */
+            margin-top: 5px;
         }
         .container {
             width: 100%;
@@ -30,6 +40,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             margin-top: 20px;
+            position: relative;
         }
         .info {
             margin-bottom: 20px;
@@ -37,37 +48,28 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             background-color: #f9f9f9;
+            position: relative;
         }
-        h1, h2 {
+        .info h2 {
             margin: 0;
+            display: flex;
+            align-items: center;
         }
-        h1 {
-            font-size: 24px;
-        }
-        h2 {
-            font-size: 20px;
-            color: #333;
-        }
-        p, ul {
-            margin: 10px 0;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-        }
-        li:last-child {
-            border-bottom: none;
+        .info h2 button {
+            background: none;
+            border: none;
+            font-size: 18px;
+            cursor: pointer;
+            margin-left: 10px;
+            color: #007bff;
         }
         .info p {
             font-size: 16px;
             color: #555;
         }
         .controls {
-            margin-bottom: 20px;
+            display: none; /* Initially hidden */
+            margin-top: 10px;
         }
         .controls label {
             font-size: 16px;
@@ -80,21 +82,59 @@
             border: 1px solid #ddd;
             border-radius: 4px;
         }
+        .controls button {
+            padding: 5px 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .controls button:hover {
+            background-color: #0056b3;
+        }
+        ul {
+            padding: 0;
+            margin: 0;
+        }
+        li {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            display: flex;
+            flex-direction: column;
+        }
+        li:last-child {
+            border-bottom: none;
+        }
+        .item-title {
+            font-weight: bold;
+            color: #333;
+        }
+        .item-details {
+            font-size: 14px;
+            color: #555;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>GPS 자동 안내방송 시스템</h1>
+        <h1 class="title">GPS 자동 안내방송 시스템</h1>
+        <p class="subtitle">도안동</p> <!-- 더 시안성 좋게 조정된 작은 글씨 -->
     </header>
     <div class="container">
-        <div class="controls">
-            <label for="tolerance">GPS 오차 범위 (도):</label>
-            <input type="number" id="tolerance" step="0.0001" value="0.0005">
-        </div>
-
         <div class="info">
-            <h2>현재 위치</h2>
+            <h2>
+                현재 위치
+                <button id="settings-btn">&#9881;</button> <!-- 톱니바퀴 버튼 -->
+            </h2>
             <p id="current-location">위도: - , 경도: -</p>
+
+            <!-- 오차 범위 입력 폼 -->
+            <div class="controls" id="controls">
+                <label for="tolerance">GPS 오차 범위 (도):</label>
+                <input type="number" id="tolerance" step="0.0001" value="0.0005">
+                <button id="confirm-btn">확인</button>
+            </div>
         </div>
 
         <div class="info">
@@ -107,7 +147,7 @@
 
     <audio id="audio" type="audio/mp3"></audio>
 
-        <script>
+    <script>
         const locations = [
             { lat: 36.3171, lon: 127.3478, musicFile: '1.mp3', name: '출발' },
             { lat: 36.3129, lon: 127.3499, musicFile: '2.mp3', name: '호반' },
@@ -116,6 +156,7 @@
         ];
 
         let hasPlayed = {}; // 목표 위치별로 음악 재생 상태를 추적
+        let tolerance = parseFloat(document.getElementById('tolerance').value);
 
         function playMusic(musicFile) {
             const audio = document.getElementById('audio');
@@ -128,8 +169,6 @@
         }
 
         function updateLocation() {
-            const tolerance = parseFloat(document.getElementById('tolerance').value);
-            
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(position => {
                     const lat = position.coords.latitude;
@@ -165,10 +204,33 @@
 
             locations.forEach(location => {
                 const listItem = document.createElement('li');
-                listItem.textContent = `위도: ${location.lat.toFixed(4)}, 경도: ${location.lon.toFixed(4)} - ${location.name} (${location.musicFile})`;
+
+                const title = document.createElement('div');
+                title.className = 'item-title';
+                title.textContent = location.name;
+
+                const details = document.createElement('div');
+                details.className = 'item-details';
+                details.textContent = `위도: ${location.lat.toFixed(4)}, 경도: ${location.lon.toFixed(4)} (${location.musicFile})`;
+
+                listItem.appendChild(title);
+                listItem.appendChild(details);
+
                 targetList.appendChild(listItem);
             });
         }
+
+        // 톱니바퀴 버튼 클릭 시 오차 범위 폼 토글
+        document.getElementById('settings-btn').addEventListener('click', () => {
+            const controls = document.getElementById('controls');
+            controls.style.display = controls.style.display === 'none' ? 'block' : 'none';
+        });
+
+        // 확인 버튼 클릭 시 오차 범위 값 업데이트
+        document.getElementById('confirm-btn').addEventListener('click', () => {
+            tolerance = parseFloat(document.getElementById('tolerance').value);
+            updateLocation(); // 오차 범위 값 변경 후 위치 업데이트
+        });
 
         updateTargetList(); // 목표 위치 및 음악 정보 업데이트
         setInterval(updateLocation, 3000); // 3초에 한 번씩 위치 갱신
