--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <body>
     <h1>GPS 자동 안내방송 시스템</h1>
     <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/대전1호선" onclick="confirmNavigation(event, 'https://mytwice.github.io/KEM/대전1호선')">대전 1호선</a>
+        <a href="https://mytwice.github.io/GPS_Broadcasting_System/대전1호선" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/대전1호선')">대전 1호선</a>
     </div>
     <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/도안동" onclick="confirmNavigation(event, 'https://mytwice.github.io/KEM/도안동')">도안동</a>
+        <a href="https://mytwice.github.io/GPS_Broadcasting_System/도안동" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/도안동')">도안동</a>
     </div>
     <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/의정부" onclick="confirmNavigation(event, 'https://mytwice.github.io/KEM/의정부')">의정부</a>
+        <a href="https://mytwice.github.io/GPS_Broadcasting_System/의정부" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/의정부')">의정부</a>
     </div>
 </body>
 </html>
