--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="https://mytwice.github.io/GPS_Broadcasting_System/도안동" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/도안동')">도안동</a>
     </div>
     <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/의정부" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/의정부')">의정부</a>
+        <a href="https://mytwice.github.io/GPS_Broadcasting_System/의정부경전철" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/의정부경전철')">의정부경전철</a>
     </div>
 </body>
 </html>
