--- a/도안동.html
+++ b/도안동.html
@@ -231,7 +231,9 @@
                     if (currentTarget) {
                         const currentTargetName = currentTarget.name;
                         const nextTargetName = nextTarget ? nextTarget.name : '다음 목표 없음';
-                        speak(`이번역은 ${currentTargetName}입니다. 다음역은 ${nextTargetName}입니다.`);
+                        if (currentTarget.musicFile === 'TTS') {
+                            speak(`이번역은 ${currentTargetName}입니다. 다음역은 ${nextTargetName}입니다.`);
+                        }
                     }
                 }, error => {
                     console.error(error);
